# learn-v1

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  EXPLORE_AGENT.md  Jenkinsfile  STYLE.md  dev.sh  docker-compose.yml  lint.sh  nginx.conf  ralph.yml  requirements.txt  shell-init.sh
backend/: alembic.ini  pyproject.toml  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_composite_indexes.py  003_add_is_admin_to_users.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  certificates.py  progress.py  quiz.py  router.py  users.py
backend/app/auth/: __init__.py  dependencies.py  keycloak.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  certificate.py  progress.py  quiz.py  user.py
backend/app/schemas/: __init__.py  admin.py  certificate.py  progress.py  quiz.py  user.py
backend/app/services/: __init__.py  admin_service.py  certificate_service.py  pdf_generator.py  progress_service.py  quiz_service.py  user_service.py
backend/app/templates/: certificate.html
backend/tests/: conftest.py  test_admin_auth.py  test_admin_service.py  test_api_admin.py  test_api_auth.py  test_api_certificates.py  test_api_progress.py  test_api_quiz.py  test_api_users.py  test_auth.py  test_certificate_service.py  test_pdf_generator.py  test_progress_service.py  test_quiz_service.py  test_user_service.py
content/: CITATIONS_NEEDED.md
diagram-specs/: body-fat-ranges-female.md  body-fat-ranges-male.md  bone-health-referral-pathway.md  goal-setting-framework.md  red-flags-thresholds.md  (+7 more)
(+304 files in other folders)
